crates/ktsense-cli/tests/snapshots/outline_snapshots__md__tiny_app__src_main_kotlin_app_util_Clock_kt.snap
---
source: crates/ktsense-cli/tests/outline_snapshots.rs
expression: "outline(fixture.root, relative_path, format)"
---
exit: 0
stderr: (empty)
--- stdout ---
## src/main/kotlin/app/util/Clock.kt

package app.util

```kotlin
fun interface Clock { fun nowEpochMillis(): Long }
object SystemClock : Clock { override fun nowEpochMillis(): Long }
class FixedClock(private val fixed: Long) : Clock { override fun nowEpochMillis(): Long }
fun slugify(input: String): String
fun truncate(input: String, limit: Int = 40): String
```
1 private or internal declaration hidden; pass --private to include them.
